--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <label class="category-item"><input type="checkbox" value="6" checked> 6. Баг-репорт и тест-кейсы</label>
             <label class="category-item"><input type="checkbox" value="7" checked> 7. SQL и Agile</label>
             <label class="category-item"><input type="checkbox" value="8" checked> 8. HTML, CSS, Charles, TCP/IP</label>
+            <label class="category-item"><input type="checkbox" value="9" checked> 9. Apache Kafka, Git и Linux</label>
         </div>
 
         <div class="settings-actions">
