--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <label class="category-item"><input type="checkbox" value="7" checked> 7. SQL и Agile</label>
             <label class="category-item"><input type="checkbox" value="8" checked> 8. HTML, CSS, Charles, TCP/IP</label>
             <label class="category-item"><input type="checkbox" value="9" checked> 9. Apache Kafka, Git и Linux</label>
+            <label class="category-item"><input type="checkbox" value="9" checked> 10. CI/CD и жизненный цикл разработки</label>
+            <label class="category-item"><input type="checkbox" value="9" checked> 11. Тестирование мобильных приложений</label>
         </div>
 
         <div class="settings-actions">
