--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
     <title>Викторинатор</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- =====================================================
+         YANDEX.METRIKA — КРИТИЧЕСКИ ВАЖНО
+         ⚠️ ЭТОТ КОД НЕЛЬЗЯ МЕНЯТЬ, УДАЛЯТЬ ИЛИ ПЕРЕНОСИТЬ
+         ⚠️ ДОЛЖЕН ПРИСУТСТВОВАТЬ ВСЕГДА НА КАЖДОЙ ВЕРСИИ САЙТА
+         ===================================================== -->
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m,e,t,r,i,k,a){
+            m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();
+            for (var j = 0; j < document.scripts.length; j++) {
+                if (document.scripts[j].src === r) { return; }
+            }
+            k=e.createElement(t),a=e.getElementsByTagName(t)[0],
+            k.async=1,k.src=r,a.parentNode.insertBefore(k,a);
+        })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=105927136', 'ym');
+
+        ym(105927136, 'init', {
+            ssr:true,
+            webvisor:true,
+            clickmap:true,
+            accurateTrackBounce:true,
+            trackLinks:true
+        });
+    </script>
+    <noscript>
+        <div>
+            <img src="https://mc.yandex.ru/watch/105927136"
+                 style="position:absolute; left:-9999px;" alt="" />
+        </div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+    <!-- ===================================================== -->
 </head>
 <body>
 
@@ -51,9 +85,10 @@
     <div id="answer"></div>
 </div>
 
-<div class="site-version">Версия 0.10</div>
+<div class="site-version">Версия 0.12</div>
 
 <script>
+/* ===== DOM ===== */
 const spinBtn = document.getElementById('spinBtn');
 const timerEl = document.getElementById('timer');
 const categoryEl = document.getElementById('category');
@@ -63,11 +98,13 @@ const answerEl = document.getElementById('answer');
 
 const settingsBtn = document.getElementById('settingsBtn');
 const settingsOverlay = document.getElementById('settingsOverlay');
+const settingsModal = document.querySelector('.settings-modal');
 const applyBtn = document.getElementById('applyCategories');
 const closeBtn = document.getElementById('closeModal');
 
 let currentData = null;
 
+/* ===== HELPERS ===== */
 function escapeHtml(text) {
     return text
         .replace(/&/g,"&amp;")
@@ -89,11 +126,15 @@ function updateQuery(categories) {
     history.replaceState({}, '', location.pathname + (p.toString() ? '?' + p : ''));
 }
 
-/* ===== НАСТРОЙКИ ===== */
+function applySelectedCategories() {
+    const selected = [...document.querySelectorAll('.category-item input:checked')]
+        .map(cb => cb.value);
+    updateQuery(selected);
+}
+
+/* ===== SETTINGS ===== */
 settingsBtn.onclick = () => {
     settingsOverlay.hidden = false;
-    settingsOverlay.classList.add('open');
-
     const selected = getCategoriesFromQuery();
     document.querySelectorAll('.category-item input').forEach(cb => {
         cb.checked = selected.length === 0 || selected.includes(cb.value);
@@ -101,20 +142,22 @@ settingsBtn.onclick = () => {
 };
 
 closeBtn.onclick = () => {
-    settingsOverlay.classList.remove('open');
     settingsOverlay.hidden = true;
 };
 
 applyBtn.onclick = () => {
-    const selected = [...document.querySelectorAll('.category-item input:checked')]
-        .map(cb => cb.value);
-
-    updateQuery(selected);
-    settingsOverlay.classList.remove('open');
+    applySelectedCategories();
     settingsOverlay.hidden = true;
 };
 
-/* ===== ВИКТОРИНА ===== */
+settingsOverlay.addEventListener('click', () => {
+    applySelectedCategories();
+    settingsOverlay.hidden = true;
+});
+
+settingsModal.addEventListener('click', e => e.stopPropagation());
+
+/* ===== QUIZ ===== */
 spinBtn.onclick = () => {
     categoryEl.textContent = '';
     questionEl.textContent = '';
